CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2020
Various contributors (see below, and AUTHORS.txt)
http://www.tuxpaint.org/

$Id$

2020.June.22 (0.9.25)
  * Ports & Building
    ----------------
    * Corrections for Haiku not opening saved files.
      (Ref: https://github.com/haikuports/haikuports/issues/3045)
      Gerasim Troeglazov <3dEyes@gmail.com>

2020.April.24 (0.9.24)
  * New tools
    ---------
    * Fill
      Not actually a new tool, but promoted from a "Magic" tool
      to a full-fledge tool in the "Tools" bar.  However, also
      avoids filling "Undo" buffer with snapshots of the drawing,
      if the fill does nothing (e.g., if you click the same spot
      a second time).

  * Ports & Building
    ----------------
    * Updates to build on Haiku.
      Luc 'Begasus' Schrijvers <begasus@gmail.com>

    * Replaced KDE (older, KDE4, in fact) specific icon and
      launcher (.desktop file) installation & uninstallaton
      invocations in Makefile with those that use Freedesktop.org
      `xdg-...` tools.

    * macOS build documentation updates.
      Mark K. Kim <markuskimius@gmail.com>

    * Wrapped some debug output in "#ifdef DEBUG" tests,
      and made sure some warnings and errors were going to
      STDERR, rather than STDOUT.

    * Updates to build for Windows (using mingw/msys)
      TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>

    * Updates to 'spec' file for Linux RPM builds
      TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>

  * Other Improvements
    ------------------
    * Added ability to move color palette options to the end of
      the New dialog, for situations where users are meant to start
      drawings with specific Starters or Templates.
      Use "--newcolorslast" option.
      (Suggested by Bernard Verhaeghe)

    * Show progress bar while loading (more) stamps, to avoid
      looking hung on slower systems or with complicated stamp images.
