@@ -103,6 +103,10 @@ $Id$
   which was from "Gimp-gluas" plug-in for The GIMP:
   http://pippin.gimp.org/plug-ins/gluas/
 
+  Animated GIF export from "gifenc",
+  https://github.com/lecram/gifenc,
+  by Marcel Rodrigues <http://lecram.github.io/>
+
   Mouse accessibility code and keyboard access
   Ankit Choudary <ankit.goaldecided@gmail.com>, as part of GSOC 2010,
   with integration and fixes by Pere Pujal i Carabantes <pere@fornol.no-ip.org>
