@@ -8,7 +8,16 @@ http://www.tuxpaint.org/
 
 $Id$
 
-2020.June.22 (0.9.25)
+2020.July.24 (0.9.25)
+  * New Features
+    ------------
+    * [WIP] GIF export option from Open -> Slideshow dialog.
+      * Utilizes "gifenc", public domain by Marcel Rodrigues:
+        https://github.com/lecram/gifenc
+      * Depends on "libimagequant", from the "pngquant2" project:
+        https://github.com/ImageOptim/libimagequant
+        (GPL v3 or later, for Free/Libre Open Source Software)
+
   * Ports & Building
     ----------------
     * Corrections for Haiku not opening saved files.
